<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".controller.QuizActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/imageBtn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@android:drawable/ic_menu_manage" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_number_txt"
                android:textColor="@color/cyan"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:padding="8dp"
                android:text="@string/score_txt"
                android:textColor="@color/cyan"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtview_question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:textSize="20sp"
            tools:text="This is Test" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/button_false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/button_true"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageBtn_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_double_arrow_left" />

            <ImageButton
                android:id="@+id/imageBtn_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left" />

            <ImageButton
                android:id="@+id/imageBtn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right" />

            <ImageButton
                android:id="@+id/imageBtn_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_double_arrow_right" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_cheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_cheat"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_over_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score_number_gameOver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_number_txt"
                android:textColor="@color/cyan"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_txt_gameOver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/score_txt"
                android:textColor="@color/cyan"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageBtn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_arrow_reset" />

    </LinearLayout>

</LinearLayout>